--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>𝕵ames' 𝕻ersonal 𝕾ite</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <!-- for file names, capital or lowercase letters matter. Made the CSS folder name capital and BAM!, now it works. -->
   </head>
   <body>
     <table cellspacing="20">
