--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- for file names, capital or lowercase letters matter. Made the CSS folder name capital and BAM!, now it works. -->
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script> <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script> <script> var setVanta = ()=>{ if (window.VANTA) window.VANTA.FOG({ el: ".s-page-1 .s-section-1 .s-section", mouseControls: true, touchControls: true, gyroControls: false, minHeight: 200.00, minWidth: 200.00, highlightColor: 0x938047, midtoneColor: 0x93765f, lowlightColor: 0x63b675, baseColor: 0x0, blurFactor: 0.23, speed: 0.50, zoom: 0.50 }) } _strk.push(function() { setVanta() window.edit_page.Event.subscribe( "Page.beforeNewOneFadeIn", setVanta ) }) </script>
     <table cellspacing="20">
       <tr>
         <td class="header"><img class="boss" src="images/James Grad.jpg" alt="Honors Grad"></td>
