--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>𝕵ames' 𝕻ersonal 𝕾ite</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <!--<link rel="stylesheet" href="CSS/styles.css"> -->
     <!-- for file names, capital or lowercase letters matter. Made the CSS folder name capital and BAM!, now it works. -->
   </head>
   <body>
