--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>𝕵ames' 𝕻ersonal 𝕾ite</title>
-    <script src="three.r119.min.js"></script> <script src="vanta.fog.min.js"></script> <script> VANTA.FOG({ el: "#your-element-selector", mouseControls: true, touchControls: true, gyroControls: false, minHeight: 200.00, minWidth: 200.00, highlightColor: 0x938047, midtoneColor: 0x93765f, lowlightColor: 0x63b675, baseColor: 0x0, blurFactor: 0.23, speed: 0.50, zoom: 0.50 }) </script>
-    <!-- <link rel="stylesheet" href="CSS/styles.css"> -->
+    <link rel="stylesheet" href="CSS/styles.css">
     <!-- for file names, capital or lowercase letters matter. Made the CSS folder name capital and BAM!, now it works. -->
   </head>
   <body>
