--- a/index.html
+++ b/index.html
@@ -1,183 +1,62 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>𝕵ames' 𝕻ersonal 𝕾ite</title>
-    <link rel="stylesheet" href="CSS/styles.css">
-    <!-- for file names, capital or lowercase letters matter. Made the CSS folder name capital and BAM!, now it works. -->
-  </head>
-  <body>
-    <table cellspacing="20">
-      <tr>
-        <td class="header"><img class="boss" src="images/James Grad.jpg" alt="Honors Grad"></td>
-        <td class="header2"><h1>James Hemsworth</h1>
-        <p><em>Junior at <strong><a href="https://new.tamuc.edu/">Texas A&M Commerce</a></strong></em></p>
-        <p>Welcome to my snapshot! This is a page that shows me, in a snapshot. As my career progresses, I will continue to make updates to this page. To find a more indepth look into my history, or my progress, please <a href="https://jameshemsworth.wordpress.com">Click Here</a></p></td>
-      </tr>
-    </table>
-<hr class="odd">
-    <h3>Education</h3>
-  <table cellspacing="10" class="education">
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>School</th>
-        <th>Field of Study</th>
-        <th>GPA</th>
-        <th>Awards</th>
-      </tr>
-    </thead>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>James Hemsworth | Developer Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <img src="images/profile_banner.png" alt="James Hemsworth Banner" class="banner">
+        <h1>James Hemsworth | Developer Portfolio</h1>
+    </header>
 
-      <tbody>
-        <tr>
-          <td>2010</td>
-          <td><a href="https://www.devry.edu/">Devry</a></td>
-          <td>Computer Information Systems</td>
-          <td>3.5</td>
-        </tr>
-        <tr>
-          <td>2013-2015</td>
-          <td><a href="https://www.tjc.edu/">Tyler Junior College</a></td>
-          <td>Psychology</td>
-          <td>3.71</td>
-          <td>Magna Cum Laude, Honors, Phi Theta Kappa, Sigma Kappa Delta</td>
-        </tr>
-        <tr>
-          <td>2015</td>
-          <td><a href="https://www.tarleton.edu/">Tarleton State University</a></td>
-          <td>Psychology</td>
-          <td>3.33</td>
-        </tr>
-        <tr>
-          <td>2020</td>
-          <td><a href="https://new.tamuc.edu/">Texas A&M Commerce</a></td>
-          <td>Computer Information Systems</td>
-          <td>Uknown Yet</td>
-        </tr>
-      </tbody>
-  </table>
-  <br><br>
-<hr class="even">
-    <h3>Work History</h3>
+    <nav>
+        <ul>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#income">Income Streams</a></li>
+        </ul>
+    </nav>
 
-<table cellspacing="10" class="workhistory">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Work</th>
-      <th>Position Held</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>2018-2020</td>
-      <td>Mark's Paint and Body</td>
-      <td>Assistant Manager</td>
-    </tr>
-    <tr>
-      <td>2018-2019</td>
-      <td>BNSF Railway</td>
-      <td>Conductor</td>
-    </tr>
-    <tr>
-      <td>2009-2017</td>
-      <td>U.S. Army</td>
-      <td>Specialist</td>
-    </tr>
+    <main>
+        <section id="projects">
+            <h2>Featured Projects</h2>
+            <div class="project-grid">
+                <div class="project-card">
+                    <img src="images/thumbnail1.png" alt="Project 1">
+                    <h3>JavaScript Portfolio Project</h3>
+                    <p>Fully coded JS project ready to deploy.</p>
+                </div>
+                <div class="project-card">
+                    <img src="images/thumbnail2.png" alt="Project 2">
+                    <h3>Python Automation Script</h3>
+                    <p>Automates repetitive tasks, fully documented.</p>
+                </div>
+            </div>
+        </section>
 
-    <tr>
-      <td>2006-2008</td>
-      <td>Nabors Drilling</td>
-      <td>Derrickhand</td>
-    </tr>
-    <tr>
-      <td>2001-2005</td>
-      <td>Albertsons</td>
-      <td>Grocery Manager</td>
-    </tr>
-  </tbody>
+        <section id="resume">
+            <h2>Resume</h2>
+            <p>Download my resume:</p>
+            <ul>
+                <li><a href="docs/James_Hemsworth_Resume.pdf" target="_blank">PDF</a></li>
+                <li><a href="docs/James_Hemsworth_Resume.docx" target="_blank">DOCX</a></li>
+            </ul>
+        </section>
 
-</table>
-<br>
-<br>
-<hr class="odd">
-    <h2 class="centerskills"><em><u>Skills</u></em></h2>
-<table cellspacing="10" class="skills">
-  <tr>
-    <td>
-      <table cellspacing="10">
-        <tr>
-          <td>HTML(5)</td>
-          <td>★★★★★</td>
-        </tr>
-        <tr>
-          <td>CSS(3)</td>
-          <td>★★★★☆</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-      <table cellspacing="10">
+        <section id="income">
+            <h2>Income Streams Overview</h2>
+            <p>Full breakdown with descriptions, suggested pricing, and actionable notes:</p>
+            <a href="docs/Income_Streams_OneSheet.pdf" target="_blank">Download One-Sheet</a>
+        </section>
+    </main>
 
-        <tr>
-          <td>BootStrap</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-        <tr>
-          <td>jQuery</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-        <tr>
-          <td>React</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-      <table cellspacing="10">
-        <tr>
-          <td>Node.js</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-        <tr>
-          <td>Express.js</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-        <tr>
-          <td>SQL</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-      </table>
-    </td>
-    <td>
-      <table cellspacing="10">
-        <tr>
-          <td>MongoDB</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-        <tr>
-          <td>Mongoose</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-        <tr>
-          <td>APIs</td>
-          <td>☆☆☆☆☆</td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
-<hr class="even">
-<br><br><br><br>
-  <div class="final">
+    <footer>
+        <p>&copy; 2025 James Hemsworth | Developer Portfolio</p>
+    </footer>
 
-
-    <a href="hobbies.html" class="final1">🎮My Hobbies📚</a>
-    <a href="contact.html" class="final2">📱Hit Me Up📧</a>
-  </div>
-  </body>
+    <script src="js/script.js"></script>
+</body>
 </html>
