--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
         <ul>
-            <li><a href="Interactive Calculator">Projects</a></li>
+            <li><a href="Interactive Calculator/index.html">Projects</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#income">Income Streams</a></li>
         </ul>
@@ -60,5 +60,6 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
