--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
         <ul>
-            <li><a href="Interactive Calculator/index.html">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#income">Income Streams</a></li>
         </ul>
@@ -26,7 +26,7 @@
             <div class="project-grid">
                 <div class="project-card">
                     <img src="images/thumbnail1.png" alt="Project 1">
-                    <h3>JavaScript Portfolio Project</h3>
+                    <h3><href="Interactive Calculator/index.html">JavaScript Portfolio Project</h3>
                     <p>Fully coded JS project ready to deploy.</p>
                 </div>
                 <div class="project-card">
@@ -60,6 +60,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
