--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="project-grid">
                 <div class="project-card">
                     <img src="images/thumbnail1.png" alt="Project 1">
-                    <h3><a href="projects/interactive-calc/index.html">JavaScript Portfolio Projects</h3>
-                    <p>Fully coded JS project ready to deploy.</p>
+                    <h3><a href="projects/interactive-calc/index.html">Basic Calculator</h3>
+                    <h3><a href="projects/interactive-calc/index.html">Basic Calculator</h3>
                 </div>
                 <div class="project-card">
                     <img src="images/thumbnail2.png" alt="Project 2">
@@ -60,6 +60,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
