--- a/projects/interactive-calc/index.html
+++ b/projects/interactive-calc/index.html
@@ -25,6 +25,7 @@
             <button onclick="press('*')">X</button>
             <button onclick="press('/')">/</button>
             <button onclick="calculate()">=</button>
+             <button onclick="clear()">CLEAR</button>
         </div>
     </div>
     <script src="js/script.js"></script>
