--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <main>
         <section id="projects">
-            <h2>Featured Projects</h2>
+            <h2>Project Lists</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="images/thumbnail1.png" alt="Project 1">
+                    <img src="images/js.png" alt="JavaScript Projects">
                     <h3><a href="projects/interactive-calc/index.html">Basic Calculator</h3>
                     <h3><a href="projects/interactive-calc/index.html">Basic Calculator</h3>
                 </div>
@@ -60,6 +60,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
