--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
                 <div class="project-card">
                     <img src="images/js.png" alt="JavaScript Projects">
                     <h3><a href="projects/interactive-calc/index.html">Basic Calculator</h3>
-                    <h3><a href="projects/interactive-calc/index.html">Basic Calculator</h3>
+                    <h3><a href="projects/budget/index.html">Basic Budget</h3>
                 </div>
                 <div class="project-card">
-                    <img src="images/thumbnail2.png" alt="Project 2">
-                    <h3>Python Automation Script</h3>
-                    <p>Automates repetitive tasks, fully documented.</p>
+                    <img src="images/py.png" alt="Python Projects">
+                    <h3><a href="python-projects/expense-tracker/main.py">Expenses</h3>
+                    <h3><a href="python-projects/markdown/main.py">Markdown to HTML</h3>
+                    <h3><a href="python-projects/password-manager/main.py">Password Manager</h3>
+                    <h3><a href="python-projects/quiz-app/main.py">Quiz App</h3>
+                    <h3><a href=:python-projects/weather/main.py">Weather App</h3>
                 </div>
             </div>
         </section>
@@ -60,6 +63,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
