--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="income">
             <h2>Income Streams Overview</h2>
             <p>Full breakdown with descriptions, suggested pricing, and actionable notes:</p>
-            <a href="docs/Income_Streams_OneSheet.pdf" target="_blank">Download One-Sheet</a>
+            <a href="docs/income_streams_index.pdf" target="_blank">Download The Guide</a>
         </section>
     </main>
 
@@ -63,6 +63,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
