--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                     <h3><a href="projects/budget/index.html">Basic Budget</h3>
                 </div>
                 <div class="project-card">
-                    <img src="images/py.png" alt="Python Projects Code File Downloads">
-                    <h3><a href="python-projects/expense-tracker/main.py">Expenses</h3>
-                    <h3><a href="python-projects/markdown/main.py">Markdown to HTML</h3>
-                    <h3><a href="python-projects/password-manager/main.py">Password Manager</h3>
-                    <h3><a href="python-projects/quiz-app/main.py">Quiz App</h3>
-                    <h3><a href=:python-projects/weather/main.py">Weather App</h3>
+                    <img src="images/py.png" alt="Python Projects">
+                    <h3><a href="python-projects/expense-tracker/main.py">Expenses Code</h3>
+                    <h3><a href="python-projects/markdown/main.py">Markdown to HTML Code</h3>
+                    <h3><a href="python-projects/password-manager/main.py">Password Manager Code</h3>
+                    <h3><a href="python-projects/quiz-app/main.py">Quiz App Code</h3>
+                    <h3><a href=:python-projects/weather/main.py">Weather App Code</h3>
                 </div>
             </div>
         </section>
@@ -63,6 +63,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
