--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h3><a href="projects/quiz-game/index.html">Quiz Game</h3>
                     <h3><a href="projects/to-do-list/index.html">To Do List</h3>
                     <h3><a href="projects/typing-test/index.html">Typing Speed Test</h3>
-                    <h3><a href="projects/weather-app/index.html">Weather App</h3>
+               <!--     <h3><a href="projects/weather-app/index.html">Weather App</h3> -->
                     <h3><a href="projects/portfoilio-preview/index.html">Preview My Portfolio</h3>
                 </div>
                 <div class="project-card">
@@ -71,6 +71,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
