--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                 <div class="project-card">
                     <img src="images/js.png" alt="JavaScript Projects">
                     <h3><a href="projects/interactive-calc/index.html">Basic Calculator</h3>
-                    <h3><a href="projects/countdown-time/index.html">Timer</h3>
+                 <!--   <h3><a href="projects/countdown-time/index.html">Timer</h3> -->
                     <h3><a href="projects/expense-tracker/index.html">Expenses</h3>
-                    <h3><a href="projects/image-slider/index.html">Image Slider</h3>
+                 <!--   <h3><a href="projects/image-slider/index.html">Image Slider</h3> -->
                     <h3><a href="projects/memory-game/index.html">Memory Game</h3>
                     <h3><a href="projects/quiz-game/index.html">Quiz Game</h3>
                     <h3><a href="projects/to-do-list/index.html">To Do List</h3>
                     <h3><a href="projects/typing-test/index.html">Typing Speed Test</h3>
-               <!--     <h3><a href="projects/weather-app/index.html">Weather App</h3> -->
-                    <h3><a href="projects/portfoilio-preview/index.html">Preview My Portfolio</h3>
+               <!--     <h3><a href="projects/weather-app/index.html">Weather App</h3> 
+                    <h3><a href="projects/portfoilio-preview/index.html">Preview My Portfolio</h3> -->
                 </div>
                 <div class="project-card">
                     <img src="images/py.png" alt="Python Projects">
@@ -71,6 +71,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
