--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/banner.png" alt="James Hemsworth Banner" class="banner">
+        <img src="images/banner.png" alt="James Hemsworth Banner" <!--class="banner"-->>
         <h1>James Hemsworth | Developer Portfolio</h1>
     </header>
 
@@ -71,6 +71,7 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
